DRP compression stats should only be removed on Android

BUG=710494

Review-Url: https://codereview.chromium.org/2808853004
Cr-Commit-Position: refs/heads/master@{#463702}

Former-commit-id: 2224b661e60f9b57f117ef437b10a73ba2d19a95